# Crucible

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  ROADMAP.md  SECURITY.md  TESTING.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish.yml  test.yml
assets/: README.md
docker/: Dockerfile.cuda  Dockerfile.gpu  entrypoint.cuda.sh  entrypoint.sh
docs/: CODEBASE_MAP.md  COMPUTE_OPTIONS.md  DEPLOYMENT.md  GPU_ACCESS.md  RUNBOOK.md  SUBMISSION.md  TESTING.md  architecture.md  build_in_public.md  demo_script.md  pitch.md
docs/recipes/: amd-mi300x.md  anthropic-claude.md  any-provider-litellm.md  aws-ec2.md  aws-sagemaker.md  azure-vm.md  cloud-gpu-vm.md  dashscope.md  digitalocean-gpu.md  gcp-compute-engine.md  google-gemini.md  hosted-api-quickstart.md  hyperbolic.md  lambda-labs.md  local-mac.md  openai-gpt4o.md  runpod-nvidia.md  together-ai.md  vast-ai.md
eval/: manual_check.md
examples/: 01_quickstart.ipynb  02_full_pipeline.ipynb  03_custom_critic.ipynb  README.md
frontend/: README.md  app.py  requirements.txt
scripts/: deploy_space.sh  io_smoke.py  one_shot_test.py  precache_demo.py
src/: __init__.py  aggregator.py  api.py  config.py  critics.py  filtering.py  lerobot_io.py  pipeline.py
src/prompts/: aggregator.txt  critic_kinematic.txt  critic_safety.txt  critic_strategy.txt  critic_task.txt  critic_visual.txt
tests/: conftest.py  test_aggregator.py  test_critics_json.py  test_filtering.py  test_imports.py  test_telemetry.py  test_transport.py
